   > Tellurium Dust
   > Tellurium Alloy
   > Life Crystal
   > Mana Crystal
   > Mysterious Yellow Badge
   > Knight Token
   > Mage Token
   > Cleric Token
   > Rogue Token
  ~ 12 upgraders:
   > ATK Scroll ★
   > MAT Scroll ★
   > DEF Scroll ★
   > MDF Scroll ★
   > PDR Scroll
   > MDR Scroll
   > GRD Scroll
   > HRG Scroll
   > MRG Scroll
   > EXR Scroll
   > MCR Scroll
   > INT Scroll
  ~ 6 fishing related items:
   > Flimsy Rod
   > Basic Rod
   > Reinforced Rod
   > Worm
   > Fathead Minnow
   > Northern Redbelly Dace
  ~ 15 miscellaneous items:
   > Phantasmal Charm
   > Advanced Salvage Kit
   > Golden Tablet Piece (Left)
   > Golden Tablet Piece (Right)
   > Golden Tablet
   > Tellurium Pickaxe
   > Tellurium Pickaxe ★
   > Tellurium Pickaxe ★★
   > Tellurium Pickaxe ★★★
   > Magical Ocarina
   > Battle Cry
   > Old Key
   > Andrew's Ancient Crystal of The Trail's Amazing History
   > [REDACTED TROPHY]
   > [REDACTED TROPHY]
 - Added 75 new equipment items:
  ~ 13 weapons:
   > Shadowspec Sword
   > Shadowspec Warhammer
   > Unstoppable Force
   > Steel Greatsword
   > Draconic Wand
   > Void Crystal Staff
   > Knuckle Spikes
   > Life Crystal Staff
   > Mana Crystal Staff
   > Hero Sword Replica
   > Tellurium Wand
   > Harmony
   > Bloodlust ★★
  ~ 8 bodygear:
   > True Shadowplate Armor
   > True Phantasmal Robes
   > True Prayer Vestments
   > True Shadowspec Leathers
   > Tellurium Heavy Armor
   > Tellurium Robes
   > Tellurium Vestments
   > Tellurium Leathers
  ~ 7 headgear:
   > Dapper-Looking Hat
   > Floppy Hat ★★
   > Silver Headband
   > Silver Mask
   > Bunny Hood
   > Dragon Scale Helmet
   > Sorrowful Headpiece
  ~ 6 footgear:
   > Hiking Boots ★★
   > Flower Boots
   > Padded Boots
   > Snow Boots
   > Trailblazing Boots
   > Trailblazing Boots ★
  ~ 7 shields:
   > Vishnu's Shield
   > Immovable Object
   > Turtle Shield
   > Tellurian Knight's Shield
   > Tellurian Knight's Bulwark
   > Vishnu's Aegis
   > Glacial Bulwark