@@ -3594,7 +3594,7 @@
     "iconIndex": 691,
     "itypeId": 2,
     "name": "Basic Rod",
-    "note": "<Menu Category: Fishing>\n<rod:4>\n\n<Synthesis Ingredients>\nFlimsy Rod\nPetrified Wood: 5\nTarantula Silk: 3\nFrozen Core\nBronze Alloy: 2\nSteel Alloy\nFathead Minnow: 10\nNorthern Redbelly Dace: 3\n</Synthesis Ingredients>\n<Mask Name: Improved Fishing Rod>",
+    "note": "<Menu Category: Fishing>\n<rod:4>\n\n<Synthesis Ingredients>\nFlimsy Rod\nPetrified Wood: 5\nTarantula Silk: 3\nFrozen Core\nBronze Alloy: 2\nSteel Alloy\nFathead Carp: 10\nWhiskerfish: 3\nNorthern Redbelly Dace: 3\n</Synthesis Ingredients>\n<Mask Name: Improved Fishing Rod>",
     "occasion": 3,
     "price": 200,
     "repeats": 1,
@@ -3645,7 +3645,7 @@
     "hitType": 0,
     "iconIndex": 1616,
     "itypeId": 1,
-    "name": "Fathead Minnow",
+    "name": "Fathead Carp",
     "note": "<Menu Category: Fishing>",
     "occasion": 3,
     "price": 20,
@@ -3698,7 +3698,7 @@
     "iconIndex": 693,
     "itypeId": 1,
     "name": "Worm",
-    "note": "<Menu Category: Fishing>\n<bait:1>\n<baitSink:0.5>",
+    "note": "<Menu Category: Fishing>\n<bait:1>\n<baitSink:0.5>\n<baitImg:bait_pink>",
     "occasion": 3,
     "price": 6,
     "repeats": 1,
@@ -6338,6 +6338,32 @@
     "price": 100,
     "repeats": 1,
     "scope": 7,
+    "speed": 0,
+    "successRate": 100,
+    "tpGain": 0
+  },
+  {
+    "id": 220,
+    "animationId": 0,
+    "consumable": false,
+    "damage": {
+      "critical": false,
+      "elementId": 0,
+      "formula": "0",
+      "type": 0,
+      "variance": 20
+    },
+    "description": "A funny-looking fish due to the appendages located on its\nchin and the sides of the mouth. It uses these to detect food.",
+    "effects": [],
+    "hitType": 0,
+    "iconIndex": 1617,
+    "itypeId": 1,
+    "name": "Whiskerfish",
+    "note": "<Menu Category: Fishing>",
+    "occasion": 3,
+    "price": 40,
+    "repeats": 1,
+    "scope": 0,
     "speed": 0,
     "successRate": 100,
     "tpGain": 0
