@@ -186,7 +186,7 @@ var $plugins =
 {"name":"GALV_CamControl","status":true,"description":"Allows greater control over where the game camera is focused. View HELP for plugin commands.","parameters":{"Tile Size":"48"}},
 {"name":"GALV_MoveRouteExtras","status":true,"description":"Additional SCRIPT commands to use within MOVE ROUTES\r\nView the plugin \"Help\" to view available commands.","parameters":{}},
 {"name":"GALV_MessageBusts","status":true,"description":"(v.2.8) Displays a bust image instead of selected face image","parameters":{"Bust Priority":"1","Bust Position":"0","Text X Offset":"390","Fade Out Speed":"40","Filename Append":""}},
-{"name":"GALV_Fishing","status":true,"description":"(v.1.7) Fishing mini game that runs in it's own scene. For advanced users.","parameters":{"--- OPTIONS ---":"","Lose Bait":"true","--- GRAPHICS ---":"","Surface Y":"281","Fisher Info":"1194,246","Fisher Rod XY Offset":"-8,-25","Default Rod Graphic":"rod","Default Bait Graphic":"bait","Equip Slot Graphic":"equipslot","Rod Equip XY":"40,40","Bait Equip XY":"100,40","No Rod Text":"Rod","No Bait Text":"Bait","No RodBait Text Size":"14","Cast Power Graphic":"castpower","Cast Power Frames":"11","Cast Pow XY":"410,200","Splash Graphic":"splash","-- SOUND/ANIM --":"","Default Music":"map_adon,80,100","Rod Equip SE":"Equip1,80,100","Bait Equip SE":"Equip1,80,100","Cast SE":"Wind4,80,120","Reel SE":"","Splash SE":"Water1,80,140","Hooked Anim":"1","Break Anim":"1","Player Catch Anim":"120","--- MENU ---":"","Menu Pos":"480,240,240","Cast Text":"Cast Line","Equip Rod Text":"Equip Rod","Equip Bait Text":"Equip Bait","Leave Text":"Stop Fishing","Catch Window":"430,270,420,180","Caught Text":"You caught a","Equip Window Width":"72","Equip Window Cols":"1","Length Text":"Length","Weight Text":"Weight","-- RECORDS --":"","Record Title":"FISH STATS","Record Types":"Fish Types","Record Total":"Total Caught","Record Fish":"Record Fish","Record Fish Number":"Number Caught","Record Fish Length":"Record Length","Record Fish Weight":"Record Weight","Record Scene Padding":"40","Record Fish Y":"150","Record Fish Scale":"1.5","--- FISH ---":"","Fish 1":"fish_minnow_green,8,0,1,2|8,-1,126,1,30|2,true,7|10,0.5|6,,0,","Fish 2":"fish_dace_red,10,1,1,2|8,-1,127,1,30|2,true,25|55,3.5|7.5,,0,","Fish 3":"","Fish 4":"","Fish 5":"","Fish 6":"","Fish 7":"","Fish 8":"","Fish 9":"","Fish 10":"","Fish 11":"","Fish 12":"","Fish 13":"","Fish 14":"","Fish 15":"","Fish 16":"","Fish 17":"","Fish 18":"","Fish 19":"","Fish 20":"","Fish 21":"","Fish 22":"","Fish 23":"","Fish 24":"","Fish 25":"","Fish 26":"","Fish 27":"","Fish 28":"","Fish 29":"","Fish 30":"","Fish 31":"","Fish 32":"","Fish 33":"","Fish 34":"","Fish 35":"","Fish 36":"","Fish 37":"","Fish 38":"","Fish 39":"","Fish 40":"","Fish 41":"","Fish 42":"","Fish 43":"","Fish 44":"","Fish 45":"","Fish 46":"","Fish 47":"","Fish 48":"","Fish 49":"","Fish 50":""}},
+{"name":"GALV_Fishing","status":true,"description":"(v.1.7) Fishing mini game that runs in it's own scene. For advanced users.","parameters":{"--- OPTIONS ---":"","Lose Bait":"true","--- GRAPHICS ---":"","Surface Y":"281","Fisher Info":"1194,246","Fisher Rod XY Offset":"-8,-25","Default Rod Graphic":"rod","Default Bait Graphic":"bait","Equip Slot Graphic":"equipslot","Rod Equip XY":"40,40","Bait Equip XY":"100,40","No Rod Text":"Rod","No Bait Text":"Bait","No RodBait Text Size":"14","Cast Power Graphic":"castpower","Cast Power Frames":"11","Cast Pow XY":"410,200","Splash Graphic":"splash","-- SOUND/ANIM --":"","Default Music":"map_adon,80,100","Rod Equip SE":"Equip1,80,100","Bait Equip SE":"Equip1,80,100","Cast SE":"Wind4,80,120","Reel SE":"","Splash SE":"Water1,80,140","Hooked Anim":"1","Break Anim":"1","Player Catch Anim":"120","--- MENU ---":"","Menu Pos":"480,240,240","Cast Text":"Cast Line","Equip Rod Text":"Equip Rod","Equip Bait Text":"Equip Bait","Leave Text":"Stop Fishing","Catch Window":"430,270,420,180","Caught Text":"You caught a","Equip Window Width":"72","Equip Window Cols":"1","Length Text":"Length","Weight Text":"Weight","-- RECORDS --":"","Record Title":"FISH STATS","Record Types":"Fish Types","Record Total":"Total Caught","Record Fish":"Record Fish","Record Fish Number":"Number Caught","Record Fish Length":"Record Length","Record Fish Weight":"Record Weight","Record Scene Padding":"40","Record Fish Y":"150","Record Fish Scale":"1.5","--- FISH ---":"","Fish 1":"fish_carp,8,0,1,2|8,-1,126,1,30|2,true,40|80,0.2|1.4,,0,","Fish 2":"fish_dace,10,1,1,2|8,-1,127,1,30|2,true,10|15,0.05|0.15,,0,","Fish 3":"fish_catfish,10,1,1,2|8,-1,220,1,30|2,true,30|60,0.1|0.2,,0,","Fish 4":"","Fish 5":"","Fish 6":"","Fish 7":"","Fish 8":"","Fish 9":"","Fish 10":"","Fish 11":"","Fish 12":"","Fish 13":"","Fish 14":"","Fish 15":"","Fish 16":"","Fish 17":"","Fish 18":"","Fish 19":"","Fish 20":"","Fish 21":"","Fish 22":"","Fish 23":"","Fish 24":"","Fish 25":"","Fish 26":"","Fish 27":"","Fish 28":"","Fish 29":"","Fish 30":"","Fish 31":"","Fish 32":"","Fish 33":"","Fish 34":"","Fish 35":"","Fish 36":"","Fish 37":"","Fish 38":"","Fish 39":"","Fish 40":"","Fish 41":"","Fish 42":"","Fish 43":"","Fish 44":"","Fish 45":"","Fish 46":"","Fish 47":"","Fish 48":"","Fish 49":"","Fish 50":""}},
 {"name":"Galv_NewItemIndication","status":true,"description":"(v.1.2) Adds a 'new' icon over items that have been obtained for the first time","parameters":{"New Icon Image":"newIcon","Icon X Offset":"0","Icon Y Offset":"0"}},
 {"name":"GALV_StationaryTurn","status":true,"description":"(v.1.3) Change movement so the player turns on the spot if direction is tapped.","parameters":{"Delay":"5"}},
 {"name":"GALV_BasicEventShadows","status":true,"description":"(v.1.2) Display shadows under the player or events on the map.","parameters":{"Shadow Image":"Shadow1","Shadow Offset":"5"}},
