@@ -99,12 +99,13 @@ Additions:
    > EXR Scroll
    > MCR Scroll
    > INT Scroll
-  ~ 6 fishing related items:
+  ~ 7 fishing related items:
    > Flimsy Rod
    > Basic Rod
    > Reinforced Rod
    > Worm
-   > Fathead Minnow
+   > Fathead Carp
+   > Whiskerfish
    > Northern Redbelly Dace
   ~ 15 miscellaneous items:
    > Phantasmal Charm
